@@ -530,4 +530,20 @@ class OrbitPlot(Qwt.QwtPlot):
         if h > 0.0: self.setAxisScale(Qwt.QwtPlot.yLeft, ymin, ymax)
         else: self.setAxisAutoScale(Qwt.QwtPlot.yLeft)
 
+    def plotDesiredOrbit(self, y, x = None):
+        """
+        hide curve if x,y are both None
+        """
+        if y is None and x is None:
+            self.curve2.setVisible(False)
+            print "disabling desired orbit and quit"
+            return
+
+        if x is not None:
+            self.curve2.setData(x, y)
+            return
+        data = self.curve2.data()
+        vx = [data.x(i) for i in range(data.size())]
+        self.curve2.setData(vx, y)
+
 
